Add framework for testing the actual config
`tests/config/recommended.js` is now in place for testing the actual config.

The fixtures directory is meant to closely mirror the examples in [ember-suave](https://github.com/DockYard/ember-suave/tree/master/tests/fixtures/rules), though the name of each subdirectory inside `fixtures` isn't intended to match up 1:1 with an ESLint rule. The idea is to catch misconfiguration errors as well as potential conflicting rule settings. Each code snippet is linted against the entire config file.

--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "author": "Alex LaFroscia",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive",
-    "test:debug": "mocha debug tests --recursive"
+    "test": "mocha tests tests/lib/rules/*.js tests/config/*.js"
   },
   "dependencies": {
+    "babel-eslint": "^6.1.2",
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
-    "eslint": "~2.6.0"
+    "chai": "^3.5.0",
+    "eslint": "^3.0.0",
+    "mocha": "^2.5.3"
   },
   "engines": {
     "node": ">=0.10.0"
