--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests tests/lib/rules/*.js tests/config/*.js"
+    "test": "mocha tests tests/lib/rules/*.js tests/**/*-test.js"
   },
   "dependencies": {
     "requireindex": "~1.1.0"
@@ -29,10 +29,10 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^3.0.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "mocha-eslint": "^3.0.1"
   },
   "engines": {
     "node": ">=0.10.0"
-  },
-  "license": "ISC"
+  }
 }
