--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "chai": "^3.5.0",
     "doctrine": "^2.1.0",
     "eslint": "^4.19.1",
