--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test": "mocha tests tests/lib/rules/*.js tests/**/*-test.js"
   },
   "dependencies": {
+    "eslint-plugin-ember": "^6.2.0",
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
