--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-ember-suave",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "description": "DockYard's ESLint plugin for Ember apps",
   "keywords": [
     "eslint",
